--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.16</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.18</version>
+        </dependency>
 <!--        mockito-->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -73,7 +78,20 @@
             <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
-<!--        assertions-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.8.0</version>  <!-- или любая актуальная версия Mockito -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.8.0</version>  <!-- или любая актуальная версия ≥3.4.0 -->
+            <scope>test</scope>
+        </dependency>
+
+        <!--        assertions-->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
